--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,10 @@ app.*.map.json
 /android/app/profile
 /android/app/release
 
-/node_modules
+# Node modules
+/node_modules/
+
+# Windows folder
+/windows/
+
+/macos/
