--- a/firebase.json
+++ b/firebase.json
@@ -1,1 +1,37 @@
-{"flutter":{"platforms":{"android":{"default":{"projectId":"naya-menu-478de","appId":"1:496204255608:android:72b7de6ac880c4c146788d","fileOutput":"android/app/google-services.json"}},"dart":{"lib/firebase_options.dart":{"projectId":"naya-menu-478de","configurations":{"android":"1:496204255608:android:72b7de6ac880c4c146788d","ios":"1:496204255608:ios:d68afed6f1b7793646788d","web":"1:496204255608:web:d3662e28c95ae99046788d"}}}}}}
+{
+  "flutter": {
+    "platforms": {
+      "android": {
+        "default": {
+          "projectId": "naya-menu-478de",
+          "appId": "1:496204255608:android:72b7de6ac880c4c146788d",
+          "fileOutput": "android/app/google-services.json"
+        }
+      },
+      "dart": {
+        "lib/firebase_options.dart": {
+          "projectId": "naya-menu-478de",
+          "configurations": {
+            "android": "1:496204255608:android:72b7de6ac880c4c146788d",
+            "ios": "1:496204255608:ios:d68afed6f1b7793646788d",
+            "web": "1:496204255608:web:d3662e28c95ae99046788d"
+          }
+        }
+      }
+    }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
+}
