--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   flutter_riverpod: ^2.5.1
   flutter_dotenv: ^5.1.0
+  cloud_firestore: ^5.2.1
 
 dev_dependencies:
   flutter_test:
