--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   flutter_dotenv: ^5.1.0
   cloud_firestore: ^5.2.1
+  dropdown_search: ^5.0.6
 
 dev_dependencies:
   flutter_test:
