--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   cloud_firestore: ^5.2.1
   dropdown_search: ^5.0.6
+  intl_phone_field: ^3.2.0
 
 dev_dependencies:
   flutter_test:
