--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cloud_firestore: ^5.2.1
   dropdown_search: ^5.0.6
   intl_phone_field: ^3.2.0
+  country_picker: ^2.0.26
 
 dev_dependencies:
   flutter_test:
