--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,10 @@ dependencies:
   country_picker: ^2.0.26
   country_picker_pro: ^0.0.5
 
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -70,6 +74,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
+    - assets/lang/
+
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
