--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   intl: ^0.19.0
+  file_picker: ^8.0.7
+  firebase_storage: ^12.1.3
 
 dev_dependencies:
   flutter_test:
