--- a/firebase.json
+++ b/firebase.json
@@ -25,7 +25,8 @@
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      ".env"
     ],
     "rewrites": [
       {
