starting point of guest app

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ flutter:
   assets:
     - .env
     - assets/lang/
+    - assets/images/demo/
+    - assets/fonts/
 
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
