--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -78,8 +78,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - .env
-    - assets/lang/
+    # - .env
+    - assets/lang/en.json
+    - assets/lang/ar.json
     - assets/images/demo/
     - assets/fonts/
 
