--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   universal_io: ^2.2.2
   image_cropper: ^8.0.2
   flutter_dotenv: ^5.1.0
+  csc_picker: ^0.2.7
 
 dev_dependencies:
   flutter_test:
