--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,10 @@ dependencies:
   image_cropper: ^8.0.2
   flutter_dotenv: ^5.1.0
   csc_picker: ^0.2.7
+  image_picker: ^1.1.2
+  path_provider: ^2.1.4
+  image: ^4.2.0
+  crop_your_image: ^1.1.0
 
 dev_dependencies:
   flutter_test:
