--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   path_provider: ^2.1.4
   image: ^4.2.0
   crop_your_image: ^1.1.0
+  flutter_image_compress: ^2.3.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
