--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   crop_your_image: ^1.1.0
   flutter_image_compress: ^2.3.0
   cached_network_image: ^3.4.1
+  flutter_colorpicker: ^1.1.0
 
 dev_dependencies:
   flutter_test:
