--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_image_compress: ^2.3.0
   cached_network_image: ^3.4.1
   flutter_colorpicker: ^1.1.0
+  currency_picker: ^2.0.21
 
 dev_dependencies:
   flutter_test:
